<resources>
    <string name="app_name">Shield</string>
    <string name="quick_settings_vpn">Shield VPN</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="shield">Shield</string>
    <string name="add_subscription">Add subscription</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="qr_code">QR code</string>
    <string name="qr_scanner_title">Scan QR code</string>
    <string name="qr_scanner_hint">Place the QR code inside the frame</string>
    <string name="camera_permission_required">Camera access is required to scan QR codes</string>
    <string name="grant_camera_permission">Grant camera access</string>
...
